--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "istanbul cover _mocha test/**/*.test.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +15,12 @@
   "devDependencies": {
     "@types/joi": "^10.4.4",
     "@types/node": "^8.0.46",
+    "istanbul": "^0.4.5",
+    "mocha": "^4.0.1",
+    "mocha-typescript": "^1.1.11",
     "ts-node": "^3.3.0",
-    "typescript": "^2.5.3"
+    "tslint": "^5.8.0",
+    "typescript": "^2.5.3",
+    "unit.js": "^2.0.0"
   }
 }
