--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@types/joi": "^10.4.4",
     "@types/node": "^8.0.46",
-    "istanbul": "^0.4.5",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^4.0.1",
     "mocha-typescript": "^1.1.11",
     "ts-node": "^3.3.0",
