--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2017",
-        "module": "umd",
+        "module": "commonjs",
         "moduleResolution": "node",
         "declaration": false,
         "noImplicitAny": false,
