--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "entityts",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "description": "EntityTS - Typescript library for entities, create entities for validation",
   "main": "index.js",
   "scripts": {
     "pretest": "tslint -p ./tsconfig.json --type-check \"./src/**/*.ts\" \"./test/**/*.ts\"",
-    "test": "istanbul cover _mocha test/**/*.test.ts"
+    "test": "istanbul cover _mocha test/**/*.test.ts",
+    "prebuild": "npm run clear && npm test",
+    "build": "tsc -p ./tsconfig.build.json",
+    "postbuild": "cp ./README.md ./dist && cp ./package.json ./dist",
+    "clear": "rm -rf ./dist"
   },
   "author": "",
   "license": "ISC",
