--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/joi": "^10.4.4",
     "@types/node": "^8.0.46",
     "istanbul": "^1.1.0-alpha.1",
+    "joi": "^13.0.1",
     "mocha": "^4.0.1",
     "mocha-typescript": "^1.1.11",
     "ts-node": "^3.3.0",
