--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@juneil/entityts",
-  "version": "1.0.0-alpha.6",
+  "version": "1.0.0",
   "description": "EntityTS - Typescript library for entities, create entities for validation",
   "main": "index.js",
   "scripts": {
@@ -18,31 +18,31 @@
     "url": "https://github.com/Juneil/entityts.git"
   },
   "keywords": [
-      "entityts",
-      "entity",
-      "entities",
-      "typescript",
-      "decorator",
-      "node",
-      "nodejs"
+    "entityts",
+    "entity",
+    "entities",
+    "typescript",
+    "decorator",
+    "node",
+    "nodejs"
   ],
   "license": "ISC",
   "dependencies": {
-    "reflect-metadata": "^0.1.10"
+    "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
-    "@types/joi": "^10.4.4",
-    "@types/node": "^8.0.46",
+    "@types/joi": "^13.0.5",
+    "@types/node": "^9.4.6",
     "istanbul": "^1.1.0-alpha.1",
-    "joi": "^13.0.1",
-    "mocha": "^4.0.1",
+    "joi": "^13.1.2",
+    "mocha": "^4.1.0",
     "mocha-typescript": "^1.1.11",
     "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.5.3",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2",
     "unit.js": "^2.0.0"
   },
   "peerDependencies": {
-    "joi": "^13.0.1"
+    "joi": "^13.1.2"
   }
 }
