fix: remove schema(), isValid() from instance + arrays validation bug

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,6 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "declaration": true,
+        "noUnusedLocals": true,
         "outDir": "./dist",
         "rootDir": "./src",
         "types": [
